--- a/closedverse_main/templates/closedverse_main/elements/comment-form.html
+++ b/closedverse_main/templates/closedverse_main/elements/comment-form.html
@@ -16,16 +16,12 @@
 		  <textarea name="body" class="textarea-text textarea" maxlength="2200" placeholder="Add a comment here." data-required></textarea>
 	  </div>
 	    <div class="textarea-memo none">
-			<br>
+			
 		</div>
   {% memo_drawboard %}
 
   </div>
-  	  <label class="file-button-container">
-			<span class="input-label">Image <span>PNG, JPG, BMP and GIF are allowed.</span></span>
-			<input type="file" class="file-button" accept="image/png, image/jpeg, image/svg+xml,  image/bmp, image/gif">
-			<input type="hidden" name="screenshot" value="">
-    </label>
+  	  {% file_button %}
 
   <div class="post-form-footer-options">
     <div class="post-form-footer-option-inner post-form-spoiler">
