--- a/closedverse_main/templates/closedverse_main/elements/post-form.html
+++ b/closedverse_main/templates/closedverse_main/elements/post-form.html
@@ -16,18 +16,14 @@
     <textarea name="body" class="textarea-text textarea " maxlength="2200" placeholder="Share your thoughts in a post to {{ community.name }}" data-open-folded-form="" data-required=""></textarea>
   </div>
   <div class="textarea-memo none">
-	<br>
+	
   </div>
   {% memo_drawboard %}
   
 	</div>
 
   <input type="text" class="textarea-line url-form" name="url" placeholder="URL/YT video" maxlength="1024">
-  <label class="file-button-container">
-      <span class="input-label">Image <span>PNG, JPG, BMP and GIF are allowed.</span></span>
-      <input type="file" class="file-button" accept="image/png, image/jpeg, image/svg+xml,  image/bmp, image/gif">
-      <input type="hidden" name="screenshot" value="">
-    </label>
+  {% file_button %}
 
 
   <div class="post-form-footer-options">
